Fix horizontal scroll in sticky too

--- a/css/_parts/home/schedule.styl
+++ b/css/_parts/home/schedule.styl
@@ -18,6 +18,7 @@ $row_schedule_line_img_mobile_path = $base_url '/assets/img/line_mobile.svg'
       overflow-x: auto
       overflow-y: hidden
       position: relative
+      white-space: nowrap
 
       &::-webkit-scrollbar
         background: transparent
@@ -35,25 +36,30 @@ $row_schedule_line_img_mobile_path = $base_url '/assets/img/line_mobile.svg'
         box-shadow: 0 4px 4px 0 rgba(51, 51, 51, 0.3)
         position: fixed
         top: 116px
-        white-space: nowrap
+        width: 100%
         z-index: 10
 
         .schedule__line-date-element-sizer--mobile-background
           background-color: $white
           height: 60px
 
+        .line_background
+          overflow-x: scroll
+          overflow-y: hidden
+          position: relative
+          white-space: nowrap
+
       .line_background
         background-image: url($row_schedule_line_img_mobile_path)
         background-position: center
         background-repeat-x: repeat
         background-repeat-y: no-repeat
-        background-size: contain
         height: 60px
         list-style: none
         margin-bottom: 0
         padding-left: 44px
         position: relative
-        width: 500px
+        width: 768px
 
       img
         left: -40px
